<resources>
    <string name="app_name">Letterboxn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="letterboxn">Letterboxn</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="facebook">Facebook</string>
    <string name="user">User</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="exception_error">exception error</string>
    <string name="not_assigned">N/A</string>
    <string name="use_fingerprint_login">Use your fingerprint to login</string>
    <string name="have_no_account_register">Don\'t have an account? <font color='#882DFF'>Register</font></string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="login_successful">Login successful!</string>
    <string name="register_successful">Registration successful!</string>
    <string name="register_failed">Registration failed!</string>
    <string name="invalid_password">Invalid password!</string>
    <string name="incorrect_pin">Incorrect PIN!</string>
    <string name="entry_pin_length_should_be_4">The length of entry pin can only be 4!</string>
    <string name="entry_pin_should_only_numbers">Entry pin can only be numbers!</string>
    <string name="password_should_contain_lowercase">Password should contain lowercase letter(s)!</string>
    <string name="password_should_contain_uppercase">Password should contain uppercase letter(s)!</string>
    <string name="password_should_contain_digit">Password should contain digit(s)!</string>
    <string name="password_should_contain_special_character">Password should contain special character(s)!</string>
    <string name="min_password_length_is_8">Minimum password length is 8!</string>
    <string name="please_fill_all_fields">Please fill the fields!</string>
    <string name="fill_all_input_fields">Please fill the input fields!</string>
    <string name="user_already_exist">User already exists!</string>
    <string name="user_not_exist">User doesn\'t exist!</string>
    <string name="auth_successful">Authentication successful!</string>
    <string name="auth_failed">Auth failed!</string>
    <string name="tmdb_auth_failed">Failed to authenticate with TMDB!</string>
    <string name="__change_your_status">\  Change your status</string>
    <string name="change_status_explanation">If you set the status offline, you won\'t be able to see your friends status either!</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="choose">Choose</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="status_online">Status Online</string>
    <string name="status_offline">Status Offline</string>
    <string name="operation_cancelled">Operation cancelled</string>
    <string name="logout_info_message">You have been logged out!</string>
    <string name="greeting_text">Hello</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="unexpected_error_occurred">unexpected error occurred</string>
    <string name="please_rate_movie">Please rate the movie!</string>
    <string name="review_cannot_be_empty">Review cannot be empty!</string>
    <string name="review_published">Your review has been published!</string>
    <string name="please_fill_all_gaps">Please fill the gaps!</string>
    <string name="navigating_help_screen">[navigating to help screen]</string>
    <string name="navigating_rated_movies_screen">[navigating all rated movies page]</string>
    <string name="navigating_reviews_screen">[navigating all reviews page]</string>
    <string name="all_reviews">[All reviews]</string>
    <string name="see_all">See all</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="movie_added_to_favorites">Movie added to Favorites!</string>
    <string name="movie_removed_from_favorites">Movie removed from Favorites!</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="added_to_watchlist">Added to Watchlist</string>
    <string name="add_to_watched_list">Add to Lists</string>
    <string name="added_to_watched_list">Added to Lists</string>
    <string name="movie_added_to_watchlist">Movie added to Watchlist!</string>
    <string name="movie_removed_from_watchlist">Movie removed from Watchlist!</string>
    <string name="movie_added_to_recent_watched_list">Movie added to recent watched list!</string>
    <string name="are_you_sure_to_remove">\  Are you sure to remove?</string>
    <string name="remove_from_list_explanation">If you remove this movie from Watched list, the rating for it will also be deleted permanently.</string>
    <string name="movie_removed_from_watched_list">Movie removed from recent watched list!</string>
    <string name="watching_date">Watching date</string>
    <string name="profile_picture_changed">Profile picture changed!</string>
    <string name="somebody_s_fav_films">\'s Favorite Films</string>
    <string name="review_deleted">Review deleted</string>
    <string name="wanna_delete_this_movie">Do you want to remove this movie?</string>
    <string name="set_a_profile_picture">\  Set a profile picture</string>
    <string name="change_or_delete_picture">\  Change or Delete picture</string>
    <string name="new_picture_from_gallery">Choose a new profile picture from the gallery.</string>
    <string name="new_profile_picture_options">You can choose a new profile picture from the gallery, or delete to set default!</string>
    <string name="profile_picture_deleted">Profile picture deleted!</string>
    <string name="take_or_choose_picture">\  Take or Choose a picture</string>
    <string name="take_or_choose_explanation">You can take a photo right now, or choose one from your gallery.</string>
    <string name="take_picture">Take a picture</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_required_explanation">You have denied camera permission several times. Please allow permission in the app settings to use this feature.</string>
    <string name="goto_settings">Go to Settings</string>
    <string name="not_announced">not announced</string>
    <string name="directed_by">Directed by</string>
    <string name="explanation_text_home">Review or track films you’ve watched...</string>
    <string name="popular_movies_this_month">Popular Movies This Month</string>
    <string name="popular_lists_this_month">Popular Lists This Month</string>
    <string name="recent_friends_review">Recent Friends’ Review</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="see_details">See details</string>
    <string name="category">Category</string>
    <string name="no_movie_by_this_category">There is no movie found by this category.</string>
    <string name="no_movie_in_watchlist">There is no movie in watchlist.</string>
    <string name="my_watchlist">My Watchlist</string>
    <string name="no_recently_watched_movie">There is no recently watched movie.</string>
    <string name="no_recently_reviwed_movie">There is no recently reviwed movie.</string>
    <string name="reviews">Reviews</string>
    <string name="lists">Lists</string>
    <string name="favorite_films">Favorite films</string>
    <string name="rated_films">Rated Films</string>
    <string name="pro">Pro</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>
    <string name="no_favorite_movie">There is no favorite movie.</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="please_enter_valid_email">Please enter a valid e-mail address!</string>
    <string name="please_enter_username">Please enter a username!</string>
    <string name="please_enter_email">Please enter the email!</string>
    <string name="please_enter_password">Please enter the password!</string>
    <string name="please_enter_comment">Please write a comment!</string>
    <string name="enter_your_pin">Enter your PIN</string>
    <string name="entry_pin">entry pin</string>
    <string name="info_welcome">“Track films you’ve\nwatched. Save those you\nwant to see. Tell your\nfriends what’s good.”</string>
    <string name="get_started">Get started</string>
</resources>