<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLogin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/eventify_guideline_left_large" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLogin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/eventify_guideline_right_large" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLogin3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBackLogin"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-16dp"
            android:layout_marginTop="-16dp"
            android:backgroundTint="@color/letterboxn_background_secondary"
            app:icon="@drawable/ic_back_arrow"
            app:iconSize="28dp"
            app:iconTint="@color/dark_gray"
            app:layout_constraintStart_toStartOf="@+id/guidelineLogin1"
            app:layout_constraintTop_toTopOf="@+id/guidelineLogin3" />

        <ImageView
            android:id="@+id/imageBackLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/background_login"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLogin2"
            app:layout_constraintStart_toStartOf="@+id/guidelineLogin1"
            app:layout_constraintTop_toTopOf="@+id/guidelineLogin3" />

        <TextView
            android:id="@+id/textLoginTEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:shadowColor="@color/gray_login"
            android:shadowDx="-12"
            android:shadowDy="12"
            android:shadowRadius="8"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageBackLogin"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLogin2"
            app:layout_constraintStart_toStartOf="@+id/guidelineLogin1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmailLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:boxCornerRadiusBottomEnd="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/eventify_input_field_corner_radius"
            app:boxStrokeColor="@color/letterboxn_login"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/letterboxn_login"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLogin2"
            app:layout_constraintStart_toStartOf="@+id/guidelineLogin1"
            app:layout_constraintTop_toBottomOf="@+id/imageBackLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPasswordLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:boxCornerRadiusBottomEnd="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/eventify_input_field_corner_radius"
            app:boxStrokeColor="@color/letterboxn_login"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/letterboxn_login"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLogin2"
            app:layout_constraintStart_toStartOf="@+id/guidelineLogin1"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmailLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textForgotPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLogin2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPasswordLogin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="true"
            android:allowClickWhenDisabled="true"
            android:backgroundTint="@color/letterboxn_login"
            android:fontFamily="@font/inter_bold"
            android:minHeight="60dp"
            android:text="@string/login"
            android:textSize="24sp"
            app:cornerRadius="@dimen/eventify_large_button_corner_radius"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLogin2"
            app:layout_constraintStart_toStartOf="@+id/guidelineLogin1"
            app:layout_constraintTop_toBottomOf="@+id/textForgotPasswordLogin" />

        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
            app:layout_constraintStart_toStartOf="@+id/buttonLogin"
            app:layout_constraintTop_toTopOf="@+id/buttonLogin" />

        <com.developer.gbuttons.GoogleSignInButton
            android:id="@+id/buttonGoogleLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLogin1"
            app:layout_constraintRight_toRightOf="@id/guidelineLogin2"
            app:layout_constraintTop_toBottomOf="@+id/textDontHaveAccountLogin" />

        <TextView
            android:id="@+id/textDontHaveAccountLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/have_no_account_register"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guidelineLogin2"
            app:layout_constraintStart_toStartOf="@+id/guidelineLogin1"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
