<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.auth.RegisterFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegister1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/eventify_guideline_left_large" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegister2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/eventify_guideline_right_large" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegister3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegister4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBackRegister"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-16dp"
            android:layout_marginTop="-16dp"
            android:backgroundTint="@color/letterboxn_background_secondary"
            app:icon="@drawable/ic_back_arrow"
            app:iconSize="28dp"
            app:iconTint="@color/dark_gray"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegister1"
            app:layout_constraintTop_toTopOf="@+id/guidelineRegister3" />

        <ImageView
            android:id="@+id/imageBackRegister"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:src="@drawable/background_register"
            app:layout_constraintBottom_toTopOf="@+id/guidelineRegister4"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRegister2"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegister1"
            app:layout_constraintTop_toTopOf="@+id/guidelineRegister3" />

        <ImageView
            android:id="@+id/imageGoogleLogoRegister"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="@+id/imageBackRegister"
            app:layout_constraintEnd_toStartOf="@+id/imageAppleLogoRegister"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/imageBackRegister"
            app:layout_constraintTop_toBottomOf="@+id/imageBackRegister"
            app:srcCompat="@drawable/logo_google" />

        <ImageView
            android:id="@+id/imageAppleLogoRegister"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toStartOf="@+id/imageFacebookLogoRegister"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageGoogleLogoRegister"
            app:layout_constraintTop_toTopOf="@+id/imageGoogleLogoRegister"
            app:srcCompat="@drawable/logo_apple" />

        <ImageView
            android:id="@+id/imageFacebookLogoRegister"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="@+id/imageBackRegister"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageAppleLogoRegister"
            app:layout_constraintTop_toTopOf="@+id/imageGoogleLogoRegister"
            app:srcCompat="@drawable/logo_facebook" />

        <TextView
            android:id="@+id/textRegisterTEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="4dp"
            android:shadowColor="@color/gray_login"
            android:shadowDx="-12"
            android:shadowDy="12"
            android:shadowRadius="8"
            android:text="@string/register"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRegister2"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegister1"
            app:layout_constraintTop_toBottomOf="@+id/imageGoogleLogoRegister" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUsernameRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:boxCornerRadiusBottomEnd="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/eventify_input_field_corner_radius"
            app:boxStrokeColor="@color/letterboxn_register"
            app:hintTextColor="@color/letterboxn_register"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRegister2"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegister1"
            app:layout_constraintTop_toBottomOf="@+id/textRegisterTEXT">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputUsernameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/username"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmailRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/eventify_input_field_corner_radius"
            app:boxStrokeColor="@color/letterboxn_register"
            app:hintTextColor="@color/letterboxn_register"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRegister2"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegister1"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsernameRegister">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPasswordRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/eventify_input_field_corner_radius"
            app:boxStrokeColor="@color/letterboxn_register"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/letterboxn_register"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRegister2"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegister1"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmailRegister">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEntryPinRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomEnd="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/eventify_input_field_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/eventify_input_field_corner_radius"
            app:boxStrokeColor="@color/letterboxn_register"
            app:endIconMode="password_toggle"
            app:helperText="*this pin will be used later"
            app:helperTextTextColor="#407BFE"
            app:hintTextColor="@color/letterboxn_register"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRegister2"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegister1"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPasswordRegister">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEntryPinRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/entry_pin"
                android:inputType="numberPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:allowClickWhenDisabled="true"
            android:enabled="true"
            android:backgroundTint="@color/letterboxn_register"
            android:fontFamily="@font/inter_bold"
            android:minHeight="60dp"
            android:text="@string/register"
            android:textSize="24sp"
            app:cornerRadius="@dimen/eventify_large_button_corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRegister2"
            app:layout_constraintStart_toStartOf="@+id/guidelineRegister1"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEntryPinRegister" />

        <ProgressBar
            android:id="@+id/progressBarRegister"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/buttonRegister"
            app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
            app:layout_constraintStart_toStartOf="@+id/buttonRegister"
            app:layout_constraintTop_toTopOf="@+id/buttonRegister" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>